--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index",
-    "start": "cross-env NODE_ENVIRONMENT=production node index"
+    "start": "cross-env NODE_ENVIRONMENT=production node index",
+    "build": "my-framework build --output public"
   },
   "dependencies": {
     "@koa/cors": "^3.0.0",
@@ -31,7 +32,9 @@
     "koa-helmet": "^4.0.0",
     "koa-logger": "^3.2.0",
     "koa-respond": "^2.1.0",
-    "koa-router": "^7.4.0"
+    "koa-router": "^7.4.0",
+    "koa-static": "^5.0.0",
+    "mongoose": "^5.7.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
