--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@koa/cors": "^3.0.0",
+    "config": "^3.2.2",
     "cross-env": "^5.2.0",
     "dotenv": "^8.0.0",
     "koa": "^2.6.2",
